--- a/public/login.css
+++ b/public/login.css
@@ -1,6 +1,6 @@
 body{
     background-image:
-            linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(pic1.jpg);
+            linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(./images/pic1.jpg);
 
     height: 100vh;
     background-size: cover;
