--- a/public/index.css
+++ b/public/index.css
@@ -49,13 +49,23 @@
     -webkit-text-stroke: 4px #f008b7;
 }
 
+button{
+    position:relative;
+    bottom: 200px;
+    left:1200px;
+
+}
+
 form>input{
-    border-radius: 25px;
+    border-radius: 50px;
+    position:relative;
+    top:112.5px;
+    left:1100px;
     width: 270px;
     outline: none;
     background-image:url(http://xxx.xx.xxx.xx/Public/img/title_search.png);
     background-repeat: no-repeat;
-    background-size: 21px 21px;
+    background-size: 100px 100px;
     background-position: 95%;
 }
 ul {
