Updates: - Convert the main page html file to pug.

--- a/views/default.pug
+++ b/views/default.pug
@@ -3,22 +3,40 @@ html
     head
         title #{title}
         link(rel="stylesheet", href="/stylesheets/default.css")
+        link(rel = "stylesheet", href ="/bootstrap-3.3.7-dist/css/bootstrap.css ")
+        link(rel = "stylesheet", href ="/bootstrap-3.3.7-dist/css/bootstrap-theme.css")
         meta(name="viewport" content="width=device-width, initial-scale=1")
+        mata(charset="UTF-8")
+        sciprt(src="../data/jquery.js")
+        script(src="../bootstrap-3.3.7-dist/js/bootstrap.js")
     body
         block header
             h1(class="Dream") Dream
             h3(class="taste") taste
 
-            a(href='/logIn'): button(type="button", id="login1") login
-            a(href='/register'): button(type="button", id="register1") register
+            a(href='/logIn'): button(type="button", id="login") login
+            a(href='/register'): button(type="button", id="register") register
 
-            ul
+            ul(id = "nav", class = "nav")
                 li: a(href="/") Home
                 li: a(href="/categories") Category
+                    ul
+                        li: a(href="#SoftDrink") SoftDrink
+                        li: a(href="#MilkProduct") MilkProduct
                 li: a(href="#Trending") Trending
                 li: a(href="/products") All Products
                 li: a(href="#Contact-Us") Contact Us
             
             form(method="POST")
                 input(type="text", placeholder="search")
+            
         block content
+
+        block footer
+            footer(class = "wrapper")
+                nav
+                    ul
+                        li: a(herf = "Contact") Contact
+                        li: a(herf = "Contact") Contact
+                        li: a(herf = "Contact") Contact
+                        li: a(herf = "Contact") Contact
