--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -1,15 +1,15 @@
 .Dream{
-            position: relative;
-            background-image: -webkit-linear-gradient(#378DBC 0%, #B6E8F1 46%, #ffffff 50%, #32120E 54%, #FFC488 58%, #582C11 90%, #EC9B4E 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            -webkit-text-stroke: 4px #f5f5f5;
-            font-size: 200px;
-            font-family: 'Titillium Web', sans-serif;
-            font-style: italic;
-            margin: 0;
-            line-height: 1;
-        }
+    position: relative;
+    background-image: -webkit-linear-gradient(#000000 0%, #000000 46%, #000000 50%, #000000 54%, #000000 58%, #000000 90%, #000000 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke: 4px #f5f5f5;
+    font-size: 200px;
+    font-family: 'Titillium Web', sans-serif;
+    font-style: italic;
+    margin: 0;
+    line-height: 1;
+}
 
 .Dream:before {
     content: 'Dream';
@@ -36,8 +36,8 @@
     font-size: 160px;
     color: #F975F7 ;
     transform:rotate(-15deg);
-    -ms-transform:rotate(-15deg); /* IE 9 */
-    -webkit-transform:rotate(-15deg); /* Safari and Chrome */
+    -ms-transform:rotate(-15deg);
+    -webkit-transform:rotate(-15deg);
     margin-left: 400px;
     margin-top: -120px;
     -webkit-text-stroke: 1px #f008b7;
@@ -49,47 +49,164 @@
     -webkit-text-stroke: 4px #f008b7;
 }
 
-button{
+
+body {
+    background-image: url(./images/pic2.jpg);
+    background-repeat: no-repeat;
+    background-size:1400px 314px;
+}
+
+#login, #register {
     position:relative;
     bottom: 200px;
     left:1200px;
-
 }
 
-form > input{
+form>input{
+    float:right;
     border-radius: 50px;
     position:relative;
-    top:112.5px;
-    left:1100px;
-    width: 270px;
+    top:73px;
+    width: 200px;
     outline: none;
     background-image:url(http://xxx.xx.xxx.xx/Public/img/title_search.png);
     background-repeat: no-repeat;
     background-size: 100px 100px;
     background-position: 95%;
 }
-ul {
-    list-style-type: none;
+
+
+.nav{
+    background-color: #EEEEEE;
+    position:relative;
+    top:112.5px;
+    height:60px;
+    width:1400Px;
+    padding:0 5px;
+    margin:0;
+}
+
+ul{
+    list-style: none;
+}
+ul li {
+    position:relative;
+    line-height: 40px;
+    text-align:center;
+    float:left;
+}
+
+a {
+    display:block;
+    width:150px;
+    height:60px;
+    color: #000000;
+    text-decoration: none;
+    font:17px/60px arial;
+}
+
+a:hover {
+    background-color: #666666;
+    color:#FFFFFF;
+}
+
+ul li ul li{
+    float:none;
+    background-color:#EEEEEE;
+}
+
+ul li ul{
+    display:none;
+    position:absolute;
+    top:60px;
+    left:0px;
+    width:90px;
+}
+
+ul li ul li a:link,ul li ul li a:visited{
+    background-color: #EEEEEE;
+}
+
+ul li ul li a:hover{
+    background:#009933;
+}
+
+ul li:hover ul {
+    display: block;
+}
+
+.column {
     position:relative;
     top:150px;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-}
-
-li {
     float: left;
+    width: 20%;
+    padding: 0 10px;
 }
 
-li a {
-    display: block;
-    color: white;
+.row {margin: 0 -5px;}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+@media screen and (max-width: 600px) {
+    .column {
+        width: 100%;
+        display: block;
+        margin-bottom: 20px;
+    }
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-wdith: 300px;
+    margin:auto;
+    padding: 16px;
     text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+    background-color: #f1f1f1;
+    font-family: arial;
 }
 
-li a:hover {
-    background-color: #111;
+.card button{
+    border:none;
+    outline:0;
+    padding:12px;
+    color:white;
+    background-color:#000;
+    text-align: center;
+    cursor:pointer;
+    width:100%;
+    font-size:18px;
+}
+
+.card button:hover{
+    opacity: 0.7;
+}
+
+
+footer nav{
+    float:right;
+}
+footer nav ul{
+}
+footer nav ul li{
+    display: inline-block;
+    margin-left: 20px;
+    list-style: none;
+}
+footer nav ul li a{
+    font-family: Lato;
+    font-weight: 400;
+    font-seiz:14px;
+    color: #fff;
+}
+
+footer{
+    position:relative;
+    top:150px;
+    width: 100%;
+    background-color: #222;
+    padding: 60px 0px;
 }
