--- a/views/index.pug
+++ b/views/index.pug
@@ -1,2 +1,89 @@
 extends default
 
+block content
+    div(class="row")
+        div(class="column")
+            div(class="card")
+                img(src="/images/drink1.jpg", alt ="alcohol", style = "width: 100%")
+                h3 Captain Morgan
+                p Some text
+                p: button More Details
+
+        div(class="column")
+            div(class="card")
+                img(src="/images/drink3.jpg", alt ="alcohol", style = "width: 100%")
+                h3 Fernet Branca
+                p Some text
+                p: button More Details
+
+        div(class="column")
+            div(class="card")
+                img(src="/images/drink1.jpg", alt ="alcohol", style = "width: 100%")
+                h3 Captain Morgan
+                p Some text
+                p: button More Details
+
+        div(class="column")
+            div(class="card")
+                img(src="/images/drink4.jpg", alt ="alcohol", style = "width: 100%")
+                h3 Crown Royal
+                p Some text
+                p: button More Details
+
+    div(class="row")
+        div(class="column")
+            div(class="card")
+                img(src="/images/drink1.jpg", alt ="alcohol", style = "width: 100%")
+                h3 Captain Morgan
+                p Some text
+                p: button More Details
+
+        div(class="column")
+            div(class="card")
+                img(src="/images/drink3.jpg", alt ="alcohol", style = "width: 100%")
+                h3 Fernet Branca
+                p Some text
+                p: button More Details
+
+        div(class="column")
+            div(class="card")
+                img(src="/images/drink1.jpg", alt ="alcohol", style = "width: 100%")
+                h3 Captain Morgan
+                p Some text
+                p: button More Details
+
+        div(class="column")
+            div(class="card")
+                img(src="/images/drink4.jpg", alt ="alcohol", style = "width: 100%")
+                h3 Crown Royal
+                p Some text
+                p: button More Details
+
+    div(class="row")
+        div(class="column")
+            div(class="card")
+                img(src="/images/drink1.jpg", alt ="alcohol", style = "width: 100%")
+                h3 Captain Morgan
+                p Some text
+                p: button More Details
+
+        div(class="column")
+            div(class="card")
+                img(src="/images/drink3.jpg", alt ="alcohol", style = "width: 100%")
+                h3 Fernet Branca
+                p Some text
+                p: button More Details
+
+        div(class="column")
+            div(class="card")
+                img(src="/images/drink1.jpg", alt ="alcohol", style = "width: 100%")
+                h3 Captain Morgan
+                p Some text
+                p: button More Details
+
+        div(class="column")
+            div(class="card")
+                img(src="/images/drink4.jpg", alt ="alcohol", style = "width: 100%")
+                h3 Crown Royal
+                p Some text
+                p: button More Details
