Updates: - Add a background image for the home page.

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -51,13 +51,13 @@
 
 
 body {
-    background-image: url(./images/pic2.jpg);
+    background-image: url(../images/pic2.jpg);
     background-repeat: no-repeat;
-    background-size:1400px 314px;
+    background-size: 100% 30%;
 }
 
 #login, #register {
-    position:relative;
+    position: relative;
     bottom: 200px;
     left:1200px;
 }
