Updates: - Add a style to the login page.

--- a/views/login.pug
+++ b/views/login.pug
@@ -4,7 +4,9 @@ html
         title #{title}
         link(rel="stylesheet", href="/stylesheets/login.css")
     body
-        form(id="login-form", method="POST")
-            input(type="text", id="username", placeholder="user name")
-            input(type="password", id="password", placeholder="password")
-            input(type="submit", value="Login")
+        div(class = "login-page")
+            div(class = "form")
+                form(id="login-form", method="POST")
+                    input(type="text", id="username", placeholder="user name")
+                    input(type="password", id="password", placeholder="password")
+                    button(type="submit") Login
