Updates: - Add a UI for login page.

--- a/views/default.pug
+++ b/views/default.pug
@@ -14,7 +14,7 @@ html
             h1(class="Dream") Dream
             h3(class="taste") taste
 
-            a(href='/logIn'): button(type="button", id="login") login
+            a(href='/login'): button(type="button", id="login") login
             a(href='/register'): button(type="button", id="register") register
 
             ul(id = "nav", class = "nav")
