--- a/views/login.pug
+++ b/views/login.pug
@@ -7,6 +7,6 @@ html
         div(class = "login-page")
             div(class = "form")
                 form(id="login-form", method="POST")
-                    input(type="text", id="username", placeholder="user name")
-                    input(type="password", id="password", placeholder="password")
+                    input(type="text", name="username", placeholder="user name")
+                    input(type="password", name="password", placeholder="password")
                     button(type="submit") Login
