--- a/public/stylesheets/product1.css
+++ b/public/stylesheets/product1.css
@@ -13,16 +13,16 @@ body {
 
 /* the style of the web title */
 .web_title {
-	background: #FDBB58;
+	background: #FDE6C4;
 }
 
 .Dream{
     position: relative;
-    background-image: -webkit-linear-gradient(#378DBC 0%, #B6E8F1 46%, #ffffff 50%, #32120E 54%, #FFC488 58%, #582C11 90%, #EC9B4E 100%);
+    background-image: -webkit-linear-gradient(#000000 0%, #000000 46%, #000000 50%, #000000 54%, #000000 58%, #000000 90%, #000000 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 4px #f5f5f5;
-    font-size: 200px;
+    font-size: 150px;
     font-family: 'Titillium Web', sans-serif;
     font-style: italic;
     margin: 0;
@@ -33,7 +33,7 @@ body {
     position: absolute;
     margin: 0px;
     font-family: 'Mr Dafoe', cursive;
-    font-size: 160px;
+    font-size: 120px;
     color: #F975F7 ;
     transform:rotate(-15deg);
     -ms-transform:rotate(-15deg); /* IE 9 */
@@ -49,18 +49,12 @@ body {
     -webkit-text-stroke: 4px #f008b7;
 }
 
-.web_title button{
-	position:relative;
-    bottom: 200px;
-    left:1200px;
-}
-
 .web_title form > input{
-	border-radius: 50px;
+	float:right;
+    border-radius: 50px;
     position:relative;
-    top:112.5px;
-    left:1100px;
-    width: 270px;
+    top:80px;
+    width: 200px;
     outline: none;
     background-image:url(http://xxx.xx.xxx.xx/Public/img/title_search.png);
     background-repeat: no-repeat;
@@ -68,37 +62,76 @@ body {
     background-position: 95%;
 }
 
-.web_title ul{
-	list-style-type: none;
+.web_title {
+	background-image: url(./images/pic2.jpg);
+    background-repeat: no-repeat;
+    background-size:100% 60%;
+}
+
+.nav{
+    background-color: #EEEEEE;
     position:relative;
-    top:150px;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
+    top:120px;
+    height:60px;
+    
+    padding:0 5px;
+    margin:0;
 }
 
-.web_title li{
-	float:left;
+.title_detail ul{
+	list-style: none;
 }
 
-.web_title li a{
-	display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
+.title_detail ul li{
+	position:relative;
+    line-height: 40px;
+    text-align:center;
+    float:left;
+}
+
+
+.title_detail a{
+	display:block;
+    width:150px;
+    
+    color: #000000;
     text-decoration: none;
+    font:17px/60px arial;
 }
 
-.web_title li a:hover{
-	background-color: #111;
+.title_detail a:hover{
+	background-color: #666666;
+    color:#FFFFFF;
 }
 
+.web_title ul li ul li{
+	float:none;
+    background-color:#EEEEEE;
+}
 
+.web_title ul li ul{
+    display:none;
+    position:absolute;
+    top:60px;
+    left:0px;
+    width:90px;
+}
+
+.web_title ul li ul li a:link,ul li ul li a:visited{
+    background-color: #EEEEEE;
+}
+
+.web_title ul li ul li a:hover{
+    background:#009933;
+}
+
+.web_title ul li:hover ul {
+    display: block;
+}
 /*style of product details*/
 
 .product{
-	padding-top:20px;
+	padding-top:100px;
 	padding-bottom: 100px;
     width:1000px;
     height:1000px;
@@ -107,6 +140,7 @@ body {
 
 .introduction{
 	position:relative;
+	
 }
 
 .product_detail{
