--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,8 @@
 extends default
 
 block content
+    link(rel="stylesheet", href="stylesheets/index.css")
+
     div(class="row")
         div(class="column")
             div(class="card")
