Updates: - Update the front-end design for all categories.

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -49,7 +49,7 @@ ul li:hover ul {
 
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-wdith: 300px;
+    max-width: 300px;
     margin:auto;
     padding: 16px;
     text-align: center;
