--- a/views/default.pug
+++ b/views/default.pug
@@ -2,9 +2,9 @@ doctype html
 html
     head
         title #{title}
-        link(rel="stylesheet", href="stylesheets/default.css")
         link(rel = "stylesheet", href ="/bootstrap-3.3.7-dist/css/bootstrap.css ")
         link(rel = "stylesheet", href ="/bootstrap-3.3.7-dist/css/bootstrap-theme.css")
+        link(rel="stylesheet", href="stylesheets/default.css")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
         mata(charset="UTF-8")
         sciprt(src="../data/jquery.js")
@@ -32,10 +32,4 @@ html
         block content
 
         block footer
-            footer.wrapper
-                nav
-                    ul
-                        li: a(herf = "Contact") Contact
-                        li: a(herf = "Contact") Contact
-                        li: a(herf = "Contact") Contact
-                        li: a(herf = "Contact") Contact
+            footer Copyright &copy; Matrix 2019
