--- a/views/index.pug
+++ b/views/index.pug
@@ -6,28 +6,28 @@ block content
     div(class="row")
         div(class="column")
             div(class="card")
-                img(src="/images/drink1.jpg", alt ="alcohol", style = "width: 100%")
+                img(src="/images/drink1.jpg", alt ="alcohol")
                 h3 Captain Morgan
                 p Some text
                 p: button More Details
 
         div(class="column")
             div(class="card")
-                img(src="/images/drink3.jpg", alt ="alcohol", style = "width: 100%")
+                img(src="/images/drink3.jpg", alt ="alcohol")
                 h3 Fernet Branca
                 p Some text
                 p: button More Details
 
         div(class="column")
             div(class="card")
-                img(src="/images/drink1.jpg", alt ="alcohol", style = "width: 100%")
+                img(src="/images/drink1.jpg", alt ="alcohol")
                 h3 Captain Morgan
                 p Some text
                 p: button More Details
 
         div(class="column")
             div(class="card")
-                img(src="/images/drink4.jpg", alt ="alcohol", style = "width: 100%")
+                img(src="/images/drink4.jpg", alt ="alcohol")
                 h3 Crown Royal
                 p Some text
                 p: button More Details
@@ -35,28 +35,28 @@ block content
     div(class="row")
         div(class="column")
             div(class="card")
-                img(src="/images/drink1.jpg", alt ="alcohol", style = "width: 100%")
+                img(src="/images/drink1.jpg", alt ="alcohol")
                 h3 Captain Morgan
                 p Some text
                 p: button More Details
 
         div(class="column")
             div(class="card")
-                img(src="/images/drink3.jpg", alt ="alcohol", style = "width: 100%")
+                img(src="/images/drink3.jpg", alt ="alcohol")
                 h3 Fernet Branca
                 p Some text
                 p: button More Details
 
         div(class="column")
             div(class="card")
-                img(src="/images/drink1.jpg", alt ="alcohol", style = "width: 100%")
+                img(src="/images/drink1.jpg", alt ="alcohol")
                 h3 Captain Morgan
                 p Some text
                 p: button More Details
 
         div(class="column")
             div(class="card")
-                img(src="/images/drink4.jpg", alt ="alcohol", style = "width: 100%")
+                img(src="/images/drink4.jpg", alt ="alcohol")
                 h3 Crown Royal
                 p Some text
                 p: button More Details
@@ -64,28 +64,28 @@ block content
     div(class="row")
         div(class="column")
             div(class="card")
-                img(src="/images/drink1.jpg", alt ="alcohol", style = "width: 100%")
+                img(src="/images/drink1.jpg", alt ="alcohol")
                 h3 Captain Morgan
                 p Some text
                 p: button More Details
 
         div(class="column")
             div(class="card")
-                img(src="/images/drink3.jpg", alt ="alcohol", style = "width: 100%")
+                img(src="/images/drink3.jpg", alt ="alcohol")
                 h3 Fernet Branca
                 p Some text
                 p: button More Details
 
         div(class="column")
             div(class="card")
-                img(src="/images/drink1.jpg", alt ="alcohol", style = "width: 100%")
+                img(src="/images/drink1.jpg", alt ="alcohol")
                 h3 Captain Morgan
                 p Some text
                 p: button More Details
 
         div(class="column")
             div(class="card")
-                img(src="/images/drink4.jpg", alt ="alcohol", style = "width: 100%")
+                img(src="/images/drink4.jpg", alt ="alcohol")
                 h3 Crown Royal
                 p Some text
                 p: button More Details
