--- a/public/stylesheets/categories.css
+++ b/public/stylesheets/categories.css
@@ -1,6 +1,6 @@
 .grid-container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 225px;
     grid-column-gap: 20px;
     grid-row-gap: 20px;
@@ -12,13 +12,16 @@
 
 .grid-item {
     background-color: #FDBB58;
+    border-radius: 10%;
     text-align: center;
     line-height: 225px;
 }
 
 .grid-item > a {
     color: rgb(255, 255, 255);
-    font-size: 25px;
+    vertical-align: middle;
+    font-family: "REEJI";
+    font-size: 20px;    
 }
 
 
