--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -1,49 +1,44 @@
-body {
-    background-image: url(../images/pic2.jpg);
+@font-face {
+    font-family: 'REEJI';
+    src: url('../fonts/REEJI.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    display: block;
+}
+
+header {
+    background-image: url(../images/OrangeJuice.jpg);
     background-repeat: no-repeat;
-    background-size: 100% 400px;
+    background-size: 100%;
+    background-position: 0% 10%;
+    clip: rect(0, 200px)
 }
 
-.Dream{
-    background-image: -webkit-linear-gradient(#000000 0%, #000000 46%, #000000 50%, #000000 54%, #000000 58%, #000000 90%, #000000 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -webkit-text-stroke: 4px #f5f5f5;
-    font-size: 200px;
-    font-family: 'Titillium Web', sans-serif;
-    font-style: italic;
-    margin: 0;
-    line-height: 1;
-}
-
-.taste {
-    position: absolute;
-    margin: 0px;
-    font-family: 'Mr Dafoe', cursive;
-    font-size: 160px;
-    color: #F975F7 ;
-    transform:rotate(-15deg);
-    -ms-transform:rotate(-15deg);
-    -webkit-transform:rotate(-15deg);
-    margin-left: 400px;
-    margin-top: -120px;
-    -webkit-text-stroke: 1px #f008b7;
-    -webkit-filter: drop-shadow(2px 2px 20px #f008b7);
-    z-index: 20;
+#logo {
+    position: relative;
 }
 
 #login, #register {
     display: inline-block;
-    position: relative;
-    bottom: 200px;
-    left: 950px;
+    position: absolute;
+}
+
+#login {
+    right: 200px;
+}
+
+#register {
+    right: 10px;
+}
+
+#login > a, #register > a {
+    color: rgb(0, 0, 0);
 }
 
 #nav_bar{
-    display: inline-block;
     background-color: #312109;
-    position:relative;
-    top:112.5px;
+    position: absolute;;
+    top:200px;
     height:60px;
     width:100%;
     padding:0 5px;
@@ -69,8 +64,9 @@ a:hover {
 #search {
     float:right;
     border-radius: 50px;
-    position:relative;
-    top:73px;
+    position:absolute;
+    top:220px;
+    left: 1050px;
     width: 200px;
     outline: none;
 }
