Updates: - Edit the style of the categories.

--- a/views/default.pug
+++ b/views/default.pug
@@ -9,7 +9,7 @@ html
         mata(charset="UTF-8")
         sciprt(src="../data/jquery.js")
         script(src="../bootstrap-3.3.7-dist/js/bootstrap.js")
-        script(type="text/javascript", src="../javascripts/link.js")
+        script(type="text/javascript", src="javascripts/link.js")
     body
         block header
             header
