--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -18,22 +18,39 @@ header {
     position: relative;
 }
 
+.button {
+    background-color: #FDBB58;
+    border: none;   
+    border-radius: 5%;
+    color: white;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 30px;
+    text-decoration: none;
+    display: inline-block;
+    height: 30px;
+    width: 100px;
+    font-size: 15px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+.button:hover {
+    background-color: rgb(253, 201, 122);   
+}
+
 #login, #register {
     display: inline-block;
     position: absolute;
 }
 
 #login {
-    right: 200px;
+    right: 150px;
 }
 
 #register {
     right: 10px;
-}
-
-#login > a, #register > a {
-    color: rgb(0, 0, 0);
-}
+}   
 
 #nav_bar{
     background-color: #312109;
@@ -59,6 +76,7 @@ a {
 a:hover {
     background-color: #666666;
     color:#FFFFFF;
+    text-decoration: none;
 }
 
 #search {
