--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -38,13 +38,17 @@ body{
 .form button{
     font-family:"Roboto", sans-serif ;
     outline: 0;
-    background: #4CAF50;
+    background: #FDBB58;
     width: 100%;
     border: 0;
     padding: 15px;
     color: #FFFFFF;
     font-size: 14px;
     cursor:pointer;
+}
+
+.form button:hover {
+    background: rgb(255, 200, 117);
 }
 
 .form .register-form{
