Updates: - Add a basic UI for all products.

--- a/views/categories.pug
+++ b/views/categories.pug
@@ -5,6 +5,6 @@ block content
     div.grid-container
         each category in categories
             div.grid-item
-                a(href=`/products/${category.name}`) #{category.name}
+                a(href=`/categories/${category.name}`) #{category.name}
 
     
