Updates: - Fixing some routing issues.

--- a/views/default.pug
+++ b/views/default.pug
@@ -4,7 +4,7 @@ html
         title #{title}
         link(rel = "stylesheet", href ="/bootstrap-3.3.7-dist/css/bootstrap.css ")
         link(rel = "stylesheet", href ="/bootstrap-3.3.7-dist/css/bootstrap-theme.css")
-        link(rel="stylesheet", href="stylesheets/default.css")
+        link(rel="stylesheet", href="/stylesheets/default.css")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
         mata(charset="UTF-8")
         sciprt(src="../data/jquery.js")
@@ -13,7 +13,7 @@ html
     body
         block header
             header
-                img(src="images/logo03.png", alt="logo", id="logo")
+                img(src="/images/logo03.png", alt="logo", id="logo")
 
                 a(href='/login', class="button", id="login") Log In
                 a(href='/register', class="button", id="register") Register
