--- a/views/products.pug
+++ b/views/products.pug
@@ -1,9 +1,9 @@
 extends default
 
 block content
-    link(rel="stylesheet", href="stylesheets/products.css")
+    link(rel="stylesheet", href="/stylesheets/products.css")
 
     div.grid-container
         each product in products
             div.grid-item
-                a(href=`./products/${product.id}`) #{product.name}
+                a(href=`/products/${product.id}`) #{product.name}
