--- a/public/stylesheets/product1.css
+++ b/public/stylesheets/product1.css
@@ -63,7 +63,7 @@ body {
 }
 
 .web_title {
-	background-image: url(./images/pic2.jpg);
+	background-image: url(./images/products/pic2.jpg);
     background-repeat: no-repeat;
     background-size:100% 60%;
 }
