--- a/views/categories.pug
+++ b/views/categories.pug
@@ -1,7 +1,7 @@
 extends default
 
 block content
-    link(rel="stylesheet", href="stylesheets/categories.css")
+    link(rel="stylesheet", href="/stylesheets/categories.css")
     div.grid-container
         each category in categories
             div.grid-item
