--- a/views/product1.pug
+++ b/views/product1.pug
@@ -3,7 +3,7 @@ html(lang='en')
   head
     meta(charset='utf-8')
     title Product: Coke Cola
-    link(rel='stylesheet', href='public/stylesheets/product1.css')
+    link(rel='stylesheet', href='/stylesheets/product1.css')
   body
     section.web_title
       h1.Dream Dream
