--- a/views/login.pug
+++ b/views/login.pug
@@ -1,12 +1,11 @@
-doctype html
-html
-    head
-        title #{title}
-        link(rel="stylesheet", href="/stylesheets/login.css")
-    body
-        div(class = "login-page")
-            div(class = "form")
-                form(id="login-form", method="POST")
-                    input(type="text", name="username", placeholder="user name")
-                    input(type="password", name="password", placeholder="password")
-                    button(type="submit") Login
+extends default
+
+block content
+    link(rel="stylesheet", href="/stylesheets/login.css")
+    
+    div(class = "login-page")
+        div(class = "form")
+            form(id="login-form", method="POST")
+                input(type="text", name="username", placeholder="username")
+                input(type="password", name="password", placeholder="password")
+                button(type="submit") Login
