--- a/views/register.pug
+++ b/views/register.pug
@@ -1,7 +1,7 @@
 extends default
 
 block content
-    link(rel="stylesheet", href="/stylesheets/login.css")
+    link(rel="stylesheet", href="/stylesheets/register.css")
 
     div(class = "login-page")
         div(class = "form")
