--- a/views/register.pug
+++ b/views/register.pug
@@ -3,7 +3,7 @@ extends default
 block content
     link(rel="stylesheet", href="/stylesheets/register.css")
 
-    div(class = "login-page")
+    div(class = "register-page")
         div(class = "form")
             form(id="login-form", method="POST")
                 input(type="text", name="username", placeholder="username")
