--- a/views/register.pug
+++ b/views/register.pug
@@ -7,6 +7,6 @@ block content
         div(class = "form")
             form(id="login-form", method="POST")
                 input(type="text", name="username", placeholder="username")
-                input(type="password", name="password", placeholder="password")
-                input(type="mail", name="mail", placeholder="mail")
+                input(type="text", name="password", placeholder="password")
+                input(type="text", name="mail", placeholder="mail")
                 button(type="submit") Register
