--- a/views/register.pug
+++ b/views/register.pug
@@ -5,7 +5,7 @@ block content
 
     div(class = "register-page")
         div(class = "form")
-            form(id="login-form", method="POST")
+            form(id="register-form", method="POST")
                 input(type="text", name="username", placeholder="username")
                 input(type="text", name="password", placeholder="password")
                 input(type="text", name="mail", placeholder="mail")
