--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 extends default
 
 block content
-    link(rel="stylesheet", href="stylesheets/index.css")
+    //- link(rel="stylesheet", href="stylesheets/index.css")
     
     div(class="row")
         div(class="column")
