--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -6,93 +6,48 @@
     display: block;
 }
 
+ .btn {
+     background-color:#FDBB58;
+     border-color: #FDBB58;
+ }
+
+ .btn:hover {
+    background-color:rgb(252, 198, 118);
+    border-color: rgb(252, 198, 118);
+ }
+
+nav{
+    background-color: #312109;
+}
+
+.nav-item {
+    width:150px;
+    text-align: center;
+}
+
+.nav-link {
+    font: arial;
+    color: #FDE6C4;
+}
+
+.nav-link:hover {
+    color:#FFFFFF;
+}
+
 header {
     background-image: url(../images/OrangeJuice.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
-    background-position: 0% 10%;
-    clip: rect(0, 200px);
-    height: 260px;
-}
-
-#logo {
-    position: relative;
-}
-
-.button {
-    background-color: #FDBB58;
-    border: none;   
-    border-radius: 5%;
-    color: white;
-    text-align: center;
-    vertical-align: middle;
-    line-height: 30px;
-    text-decoration: none;
-    display: inline-block;
-    height: 30px;
-    width: 100px;
-    font-size: 15px;
-    margin: 4px 2px;
-    cursor: pointer;
-}
-
-.button:hover {
-    background-color: rgb(253, 201, 122);   
-}
-
-#login, #register {
-    display: inline-block;
-    position: absolute;
-}
-
-#login {
-    right: 150px;
-}
-
-#register {
-    right: 10px;
-}   
-
-#nav_bar{
-    background-color: #312109;
-    position: absolute;
-    top:200px;
-    height:60px;
-    width:100%;
-    padding:0px 5px;
-}
-
-a {
-    display:inline-block;
-    width:150px;
-    height:60px;
-    color: #FDE6C4;
-    text-decoration: none;
-    font:17px/60px arial;
-    position: relative;
-    text-align: center;
-}
-
-a:hover {
-    background-color: #666666;
-    color:#FFFFFF;
-    text-decoration: none;
-}
-
-#search {
-    float: right;
-    border-radius: 50px;
-    position:relative;
-    top: 16px;
-    width: 200px;
-    outline: none;
+    background-position: 0% 10%;    
+    margin-bottom: 16px;
 }
 
 footer{
     position:relative;
     width: 100%;
     background-color: #312109;
-    padding: 60px 0px;
+    padding: 30px 0px;
+    margin-top: 16px;
     color: #FDE6C4;
     text-align: center;
 }
