--- a/views/default.pug
+++ b/views/default.pug
@@ -2,32 +2,40 @@ doctype html
 html
     head
         title #{title}
-        link(rel = "stylesheet", href ="/bootstrap-3.3.7-dist/css/bootstrap.css ")
-        link(rel = "stylesheet", href ="/bootstrap-3.3.7-dist/css/bootstrap-theme.css")
-        link(rel="stylesheet", href="/stylesheets/default.css")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
         mata(charset="UTF-8")
-        sciprt(src="../data/jquery.js")
-        script(src="../bootstrap-3.3.7-dist/js/bootstrap.js")
-        script(type="text/javascript", src="javascripts/link.js")
+        link(rel = "stylesheet", href ="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css")
+        link(rel="stylesheet", href="/stylesheets/default.css")
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     body
         block header
             header.container-fluid
                 div.row
-                    img(src="/images/logo03.png", alt="logo", id="logo")
-
-                    a(href='/login', class="button", id="login") Log In
-                    a(href='/register', class="button", id="register") Register
-                div.row
-                    nav(id = "nav_bar")
-                        a(href="/") Home
-                        a(href="/categories") Category
-                        a(href="#Trending") Trending
-                        a(href="/products") All Products
-                        a(href="#Contact-Us") Contact Us
-                        
-                    form(method="POST")
-                        input(type="text", id="search", placeholder="search")
+                    div.col-md-10
+                        img(src="/images/logo03.png", alt="logo", id="logo")
+                    div.col-md-1
+                        a(href='/login', class="btn btn-success", id="login", role="button") Log In
+                    div.col-md-1
+                        a(href='/register', class="btn btn-success", id="register", role="button") Register
+                nav(class="row navbar navbar-expand-sm")
+                    .col-md-8
+                        ul.navbar-nav
+                            li.nav-item
+                                a(class="nav-link", href="/") Home
+                            li.nav-item
+                                a(class="nav-link", href="/categories") Category
+                            li.nav-item
+                                a(class="nav-link", href="#Trending") Trending
+                            li.nav-item
+                                a(class="nav-link", href="/products") All Products
+                            li.nav-item
+                                a(class="nav-link", href="#Contact-Us") Contact Us
+                    .col-md-4  
+                        form(class="form-inline", method="POST")
+                            input(type="text", id="search", class="form-control mr-sm-2", placeholder="Search")
+                            button(type="submit", class="btn btn-success") Search
                 
         block content
 
