--- a/views/addProduct.pug
+++ b/views/addProduct.pug
@@ -2,7 +2,7 @@ extends default
 
 block content
     .container-fluid
-        form(method="POST")
+        form(method="POST", enctype="multipart/form-data")
             .form-group
                 label(for="productName") Product Name:
                 input(type="text", id="productName", class="form-control", name="productName", placeholder="product name")
