--- a/views/default.pug
+++ b/views/default.pug
@@ -16,9 +16,9 @@ html
                     div.col-md-10
                         img(src="/images/logo03.png", alt="logo", id="logo")
                     div.col-md-1
-                        a(href='/login', class="btn btn-success", id="login", role="button") Log In
+                        a(href='/login', class="btn", id="login", role="button") Log In
                     div.col-md-1
-                        a(href='/register', class="btn btn-success", id="register", role="button") Register
+                        a(href='/register', class="btn", id="register", role="button") Register
                 nav(class="row navbar navbar-expand-sm")
                     .col-md-8
                         ul.navbar-nav
