--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -6,14 +6,23 @@
     display: block;
 }
 
+header {
+    background-image: url(../images/OrangeJuice.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: 0% 10%;
+}
+
  .btn {
      background-color:#FDBB58;
      border-color: #FDBB58;
+     color: rgb(255, 255, 255);
  }
 
  .btn:hover {
     background-color:rgb(252, 198, 118);
     border-color: rgb(252, 198, 118);
+    color: rgb(248, 237, 220);
  }
 
 nav{
@@ -34,20 +43,13 @@ nav{
     color:#FFFFFF;
 }
 
-header {
-    background-image: url(../images/OrangeJuice.jpg);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: 0% 10%;    
-    margin-bottom: 16px;
-}
+
 
 footer{
     position:relative;
     width: 100%;
     background-color: #312109;
     padding: 30px 0px;
-    margin-top: 16px;
     color: #FDE6C4;
     text-align: center;
 }
