--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,77 +1,15 @@
-ul li ul li{
-    float:none;
-    background-color:#EEEEEE;
-}
-
-ul li ul{
-    display:none;
-    position:absolute;
-    top:60px;
-    left:0px;
-    width:90px;
-}
-
-ul li ul li a:link, ul li ul li a:visited{
-    background-color: #EEEEEE;
-}
-
-ul li ul li a:hover{
-    background:#009933;
-}
-
-ul li:hover ul {
-    display: block;
-}
-
-.column {
-    position:relative;
-    float: left;
-    width: 20%;
-    padding: 0 10px;
-}
-
-.row {margin: 0 -5px;}
-
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-@media screen and (max-width: 600px) {
-    .column {
-        width: 100%;
-        display: block;
-        margin-bottom: 20px;
-    }
+.col-md-3 {
+    padding: 32px;
 }
 
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 300px;
-    margin:auto;
     padding: 16px;
     text-align: center;
     background-color: #f1f1f1;
     font-family: arial;
 }
 
-.card button{
-    border:none;
-    outline:0;
-    padding:12px;
-    color:white;
-    background-color:#000;
-    text-align: center;
-    cursor:pointer;
-    width:100%;
-    font-size:18px;
-}
-
-.card button:hover{
-    opacity: 0.7;
-}
-
-.card img {
-    width: 100%;
+.container-fluid {
+    margin: 16px 0px;
 }
