--- a/public/stylesheets/products.css
+++ b/public/stylesheets/products.css
@@ -1,17 +1,16 @@
-.grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 225px;
-    grid-column-gap: 20px;
-    grid-row-gap: 20px;
-    position: relative;
-    width: 100%;
-    padding: 20px;  
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 16px;
+    text-align: center;
+    background-color: #f1f1f1;
+    font-family: arial;
 }
 
-.grid-item {
-    background-color: #FDBB58;
-    border-radius: 10%;
-    text-align: center;
-    line-height: 225px;
+#addProduct {
+    border: 2px rgb(201, 201, 201) dashed;
+    border-radius: 5px;
+}
+
+#addProduct:hover {
+    background-color: rgb(201, 201, 201)
 }
