--- a/views/addProduct.pug
+++ b/views/addProduct.pug
@@ -1,6 +1,8 @@
 extends default
 
 block content
+
+    link(rel="stylesheet", href="/stylesheets/addProduct.css")
     .container-fluid
         form(method="POST", enctype="multipart/form-data")
             .form-group
