--- a/views/default.pug
+++ b/views/default.pug
@@ -33,12 +33,12 @@ html
                             li.nav-item
                                 a(class="nav-link", href="#Contact-Us") Contact Us
                     .col-md-4  
-                        form(class="form-inline", method="POST")
-                            input(type="text", id="search", class="form-control mr-sm-2", placeholder="Search")
-                            button(type="submit", class="btn btn-success") Search
+                        form(class="form-inline", action="/search", method="POST")
+                            input(type="text", name="search", id="search", class="form-control mr-sm-2", placeholder="Search")
+                            button(type="submit", class="btn") Search
                 
         block content
 
         block footer
             footer.container-fluid
-             p.col-12 Copyright &copy; Matrix 2019
+                p.col-12 Copyright &copy; Matrix 2019
