--- a/views/productNotFound.pug
+++ b/views/productNotFound.pug
@@ -1,7 +1,7 @@
 extends default
 
 block content
-    link(rel="stylesheet", href="/stylesheets/productNotFound.css")
+    link(rel="stylesheet", href="/stylesheets/containerBox.css")
 
-    div(id="error", class="container-fluid")
+    div(class="container-fluid container-box")
         h1 Sorry, there is no matched result.
