--- a/views/products.pug
+++ b/views/products.pug
@@ -11,4 +11,4 @@ block content
                 div(class="col-md-3 card")
                     img(class="card-img-top", src=`/uploads/${product.image}`, alt="Drink image")
                     .card-body
-                        a(href=`/products/${product.id}`, class="btn streched-link") More Detail
+                        a(href=`/products/${product.id}`, class="btn btn-waring streched-link") More Detail
