--- a/views/index.pug
+++ b/views/index.pug
@@ -11,4 +11,4 @@ block content
                     .card-body
                         h4.card-title #{product.name}
                         p.card-text #{product.description}
-                        a(href=`/products/${product.id}`, class="btn") More Detail
+                        a(href=`/products/${product.id}`, class="btn btn-warning") More Detail
