--- a/views/login.pug
+++ b/views/login.pug
@@ -6,6 +6,6 @@ block content
     div(class = "login-page")
         div(class = "form")
             form(id="login-form", method="POST")
-                input(type="text", name="username", placeholder="username")
-                input(type="password", name="password", placeholder="password")
+                input(required type="text", name="username", placeholder="username")
+                input(required type="password", name="password", placeholder="password")
                 button(type="submit") Login
