--- a/views/register.pug
+++ b/views/register.pug
@@ -6,7 +6,7 @@ block content
     div(class = "register-page")
         div(class = "form")
             form(id="register-form", method="POST")
-                input(type="text", name="username", placeholder="username")
-                input(type="text", name="password", placeholder="password")
-                input(type="text", name="mail", placeholder="mail")
+                input(required type="text", name="username", placeholder="username")
+                input(required type="text", name="password", placeholder="password")
+                input(required type="text", name="mail", placeholder="mail")
                 button(type="submit") Register
