--- a/views/register.pug
+++ b/views/register.pug
@@ -7,6 +7,6 @@ block content
         div(class = "form")
             form(id="register-form", method="POST")
                 input(required type="text", name="username", placeholder="username")
-                input(required type="text", name="password", placeholder="password")
-                input(required type="text", name="mail", placeholder="mail")
+                input(required type="password", name="password", placeholder="password")
+                input(required type="text", name="email", placeholder="email")
                 button(type="submit") Register
