--- a/views/addProduct.pug
+++ b/views/addProduct.pug
@@ -4,6 +4,7 @@ block content
 
     link(rel="stylesheet", href="/stylesheets/addProduct.css")
     .container-fluid
+        h5.text-danger #{msg}
         form(method="POST", enctype="multipart/form-data")
             .form-group
                 label(for="productName") Product Name:
