--- a/views/product.pug
+++ b/views/product.pug
@@ -2,7 +2,7 @@ extends default
 
 block content
     h1 #{product.name}
-    img(src=`/uploads/${product.image}`, alt="product picture")
+    img(src=`${product.image}`, alt="product picture")
     h1 #{product.price}
     h1 #{product.description}
     h1 #{product.category}
