--- a/views/products.pug
+++ b/views/products.pug
@@ -9,6 +9,6 @@ block content
                 a(href="/addProduct") Add Product
             each product in products
                 div(class="col-md-3 card")
-                    img(class="card-img-top", src=`/uploads/${product.image}`, alt="Drink image")
+                    img(class="card-img-top", src=`${product.image}`, alt="Drink image")
                     .card-body
                         a(href=`/products/${product.id}`, class="btn btn-waring streched-link") More Detail
